--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=dev node server.js",
     "test": "NODE_ENV=test jest --runInBand",
     "test:coverage": "NODE_ENV=test jest --runInBand --coverage"
   },
