--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev node server.js",
-    "test": "NODE_ENV=test jest --runInBand",
-    "test:coverage": "NODE_ENV=test jest --runInBand --coverage"
+    "start": "cross-env NODE_ENV=dev node server.js",
+    "test": "cross-env NODE_ENV=test jest --runInBand",
+    "test:coverage": " cross-env NODE_ENV=test jest --runInBand --coverage"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
